# quadrilateralcowboy

./: .gitignore  CMakeLists.txt  LICENSE  MayaImport.vcxproj  SConstruct  _Debug.props  _Release.props  build.linux.md  curllib.vcxproj  doomdll.vcxproj  flibitGLIMP.sh  flite_speech.txt  game-d3xp.vcxproj  game.vcxproj  idlib.vcxproj  qc.6  quadcow.sln  quadrilateralcowboy.6  readme.md  typeinfo.vcxproj
.github/workflows/: ci.yml
MayaImport/: maya_main.cpp
TypeInfo/: TypeInfoGen.cpp  main.cpp
cm/: CollisionModel.h  CollisionModel_debug.cpp  CollisionModel_files.cpp  CollisionModel_load.cpp  CollisionModel_local.h
d3xp/: AFEntity.cpp  AFEntity.h  Actor.cpp  Actor.h  BrittleFracture.cpp  BrittleFracture.h  Camera.cpp  Camera.h  Entity.cpp  Entity.h  Game.h  GameEdit.cpp  Game_local.cpp  Game_local.h  Game_network.cpp  Grabber.cpp  Item.cpp  Item.h  Light.cpp  Light.h  Misc.cpp  Misc.h  Moveable.cpp  Moveable.h  Mover.cpp  Mover.h  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Player.h  PlayerView.cpp  PlayerView.h  Projectile.cpp  Projectile.h  Pvs.cpp  SecurityCamera.cpp  SecurityCamera.h  Target.cpp  Trigger.cpp  Trigger.h  (+76 more)
d3xp/ai/: AAS_routing.cpp  AI.cpp  AI.h  AI_events.cpp  AI_pathing.cpp
d3xp/anim/: Anim.h  Anim_Blend.cpp  Anim_Import.cpp
d3xp/gamesys/: Class.cpp  Event.cpp  SysCmds.cpp  SysCvar.cpp  SysCvar.h  TypeInfo.cpp
d3xp/physics/: Clip.cpp  Force_Field.cpp  Force_Field.h  Force_Grab.cpp  Physics_AF.cpp  Physics_AF.h  Physics_Parametric.cpp  Physics_Parametric.h  Physics_Player.cpp  Physics_Player.h  Physics_RigidBody.cpp
d3xp/script/: Script_Interpreter.cpp  Script_Interpreter.h  Script_Program.h  Script_Thread.cpp  Script_Thread.h
framework/: BuildDefines.h  BuildVersion.h  CVarSystem.cpp  CVarSystem.h  CmdSystem.cpp  Common.cpp  Common.h  Compressor.cpp  Console.cpp  DeclAF.cpp  DeclManager.cpp  DeclManager.h  EditField.cpp  File.cpp  FileSystem.cpp  FileSystem.h  KeyInput.cpp  KeyInput.h  Licensee.h  Session.cpp  Session.h  Session_local.h  Session_menu.cpp  UsercmdGen.cpp  UsercmdGen.h
framework/async/: AsyncClient.cpp  AsyncClient.h  AsyncServer.cpp
game/: Game.h  Game_local.cpp  Game_network.cpp  MultiplayerGame.cpp  MultiplayerGame.h  Player.cpp  Pvs.cpp  Weapon.cpp
game/ai/: AI_pathing.cpp
game/gamesys/: Class.cpp  GameTypeInfo.h  SysCmds.cpp  SysCvar.cpp  TypeInfo.cpp
game/physics/: Physics_AF.cpp
game/script/: Script_Interpreter.cpp  Script_Thread.cpp
idlib/: Base64.cpp  Dict.cpp  FloatExceptions.h  Heap.h  Lexer.cpp  Lib.cpp  Lib.h  Parser.cpp  Parser.h  Str.cpp  Str.h  Token.h  precompiled.h
idlib/bv/: Frustum.cpp  Frustum.h
idlib/containers/: StrPool.h
idlib/hashing/: CRC32.cpp  CRC32.h  MD4.cpp  MD4.h  MD5.cpp  MD5.h
idlib/math/: Matrix.cpp  Matrix.h  Random.h  Simd.cpp  Simd_AltiVec.cpp  Simd_AltiVec.h  Simd_Generic.cpp  Simd_SSE.cpp  Simd_SSE2.cpp  Vector.cpp  Vector.h  idMath.h
openal/linux/: libopenal.so.1  libopenal.so.1.16.0
renderer/: Cinematic.cpp  Image_files.cpp  Image_init.cpp  Image_load.cpp  MegaTexture.cpp  Model_lwo.cpp  Model_ma.cpp  RenderSystem.cpp  RenderSystem.h  RenderSystem_init.cpp  RenderWorld.h  RenderWorld_load.cpp  draw_arb2.cpp  draw_common.cpp  glext.h  qgl.h  tr_backend.cpp  tr_deform.cpp  tr_font.cpp  tr_local.h  tr_subview.cpp
renderer/jpeg-6/: jdpostct.c  jerror.c  jquant1.c
sdl2/include/: SDL_config.h  SDL_config_emscripten.h  SDL_config_linux.h
sdl2/lib/linux/: libSDL2-2.0.so.0  libSDL2-2.0.so.0.4.0
sdl2/lib/osx/: libSDL2-2.0.0.dylib  libSDL2.dylib
sdl2/lib/win32/: SDL2.lib  SDL2main.lib
sound/: snd_cache.cpp  snd_decoder.cpp  snd_efxfile.cpp  snd_emitter.cpp  snd_local.h  snd_shader.cpp  snd_system.cpp  snd_world.cpp  sound.h
sys/: events.cpp  glimp.cpp  sys_local.cpp  sys_local.h  sys_public.h
sys/gllog/: read.py
sys/linux/: glimp.cpp  glimp_dlopen.cpp.m4  input.cpp  main.cpp  sound_oal.cpp
sys/osx/: DOOMController.mm  Info.plist  PickMonitor.cpp  PickMonitor.h  PreferencesDialog.cpp  Quadrilateral Cowboy.icns  macosx_event.mm  macosx_glimp.mm  macosx_sound.cpp  macosx_sys.h
sys/osx/English.lproj/: ASLCore.xib  InfoPlist.strings
sys/osx/English.lproj/ASLCore.nib/: objects.xib
sys/osx/French.lproj/: InfoPlist.strings
sys/osx/Quadrilateral Cowboy.xcodeproj/: project.pbxproj
sys/osx/Quadrilateral Cowboy.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
sys/osx/SubProjects/curl.xcodeproj/: project.pbxproj
sys/osx/d3go/: d3go.c  readme.txt
sys/osx/d3xp.xcodeproj/: project.pbxproj
sys/osx/game.xcodeproj/: project.pbxproj
sys/osx/idlib.xcodeproj/: project.pbxproj
sys/osx/oggVorbis.xcodeproj/: project.pbxproj
sys/posix/: posix_input.cpp  posix_main.cpp  posix_net.cpp
sys/scons/: SConscript.core  SConscript.game  SConscript.idlib
sys/stub/: stub_gl.cpp
sys/win32/: gl_logfuncs.cpp  win_glimp.cpp  win_input.cpp  win_local.h  win_main.cpp  win_nanoafx.h  win_shared.cpp  win_snd.cpp  win_syscon.cpp  win_taskkeyhook.cpp  win_wndproc.cpp
tools/af/: DialogAFBody.cpp
tools/compilers/aas/: AASFile.cpp  Brush.cpp  BrushBSP.cpp
tools/compilers/dmap/: dmap.cpp  optimize.cpp  portals.cpp
tools/compilers/roqvq/: codec.cpp
tools/radiant/: EditorBrush.cpp  EditorEntity.cpp  PARSE.CPP
ui/: BindWindow.cpp  ChoiceWindow.cpp  DeviceContext.cpp  EditWindow.cpp  EditWindow.h  GuiScript.cpp  ListGUI.cpp  ListWindow.cpp  ListWindow.h  RenderWindow.cpp  RenderWindow.h  SimpleWindow.h  SliderWindow.cpp  SliderWindow.h  UserInterface.cpp  Window.cpp  Window.h  Winvar.cpp  gamelaserduckwindow.cpp  gamelaserduckwindow.h
